# regrag-aml

./: .env.example  .gitignore  LICENSE  README.md  app.py  ask.py  build_index.py  download_corpus.py  find_page.py  pyproject.toml  requirements.txt  run_eval.py  tune_threshold.py  validate_gold_set.py
.streamlit/: config.toml
eval/: GOLD_SET_GUIDE.md  gold_set.yaml
regrag/: __init__.py  chunk.py  config.py  coverage.py  embed.py  generate.py  goldset.py  ingest.py  judge.py  llm.py  metrics.py  retrieve.py  store.py
reports/: eval_report.md
results/: eval_results.json
src/regrag/: config.py
